# godot-rust

./: .gitignore  Cargo.toml
bindings_generator/src/: api.rs  dependency.rs  lib.rs  methods.rs  special_methods.rs
core/src/: class.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/derive_example/: Cargo.toml
examples/derive_example/src/: lib.rs
examples/dodge-the-creeps/: Cargo.toml  Main.gdns  Main.tscn  Mob.gdns  Mob.tscn  Player.gdns  Player.tscn  library.gdnlib  project.godot
examples/dodge-the-creeps/src/: lib.rs  main_script.rs  mob.rs  player.rs
examples/low_level_registering/src/: lib.rs
examples/manually_registered/: Main.tscn
examples/manually_registered/src/: lib.rs
examples/scene_create/src/: lib.rs
examples/spinning_cube/src/: lib.rs
gdnative/: build.rs
gdnative-bindings/: build.rs
gdnative-bindings/src/: lib.rs
gdnative-core/: build.rs
gdnative-core/src/: access.rs  byte_array.rs  class.rs  color.rs  color_array.rs  dictionary.rs  float32_array.rs  generated.rs  init.rs  int32_array.rs  macros.rs  node_path.rs  object.rs  rid.rs  string.rs  string_array.rs  variant.rs  variant_array.rs  vector2.rs  vector2_array.rs  vector3.rs  vector3_array.rs
gdnative-derive/: Cargo.toml
gdnative-derive/src/: derive_conv_variant.rs  derive_macro.rs  method_macro.rs
gdnative/src/: class.rs  init.rs  macros.rs
test/src/: lib.rs
