[package]
name = "gdnative-derive"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative derive and procedural macros."
documentation = "https://docs.rs/crate/gdnative"
repository = "https://github.com/GodotNativeTools/godot-rust"
version = "0.5.0"
license = "MIT"
workspace = ".."

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.26", features = ["full"] }
quote = "0.6.11"
